

[package]
name = "vrl-bytes"
version = "0.1.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false
workspace = "../workspace"


[lib]
name = "vrl_bytes"
path = "./lib.rs"
test = true
bench = false
doctest = false


[features]
default = []


