

[package]
name = "vrl-cli-arguments"
workspace = "../workspace"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false


[lib]
name = "vrl_cli_arguments"
path = "./lib.rs"
test = true
bench = false
doctest = false


[features]
default = []


[dependencies]
vrl-preludes = { path = "../preludes" }
vrl-errors = { path = "../errors" }


[[test]]
name = "vrl_cli_arguments_tests_public"
path = "./tests_public.rs"


