

[package]
name = "vrl-errors"
version = "0.1.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false
workspace = "../workspace"


[lib]
name = "vrl_errors"
path = "./lib.rs"
test = true
bench = false
doctest = false


[features]
default = []


[dependencies]


[dev-dependencies]
anyhow = "*"


[[test]]
name = "vrl_errors_tests_public"
path = "./tests_public.rs"


[[bench]]
name = "vrl_errors_benches_public"
path = "./benches_public.rs"


