

[package]
name = "vrl-errors"
workspace = "../workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false


[lib]
name = "vrl_errors"
path = "./lib.rs"
test = true
bench = false
doctest = false


[features]
default = [
#	"anyhow",
]


[dependencies]
vrl-preludes = { path = "../preludes" }
anyhow = { version = "*", default-features = false, features = ["std"], optional = true }


[dev-dependencies]
anyhow = { version = "*", default-features = false, features = ["std"], optional = false }


[[test]]
name = "vrl_errors_tests_public"
path = "./tests_public.rs"


[[bench]]
name = "vrl_errors_benches_public"
path = "./benches_public.rs"


