

[package]
name = "vrl"
workspace = "../workspace"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false


[lib]
name = "vrl"
path = "./lib.rs"
test = false
bench = false
doctest = false


[features]
default = []


[dependencies]
vrl-bytes = { path = "../bytes" }
vrl-cli-arguments = { path = "../cli-arguments" }
vrl-errors = { path = "../errors" }
vrl-preludes = { path = "../preludes" }
vrl-random = { path = "../random" }


