

[package]
name = "vrl-preludes"
workspace = "../workspace"
version.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false


[lib]
name = "vrl_preludes"
path = "./lib.rs"
test = true
bench = false
doctest = false


[features]
default = []


