

[package]
name = "vrl-random"
version = "0.1.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false
workspace = "../workspace"


[lib]
name = "vrl_random"
path = "./lib.rs"
test = true
bench = false
doctest = false


[features]
default = []


[dependencies]
vrl-preludes = { path = "../preludes" }
rand = { version = "*", default-features = false, features = ["std", "std_rng"], optional = false }

