

[package]
name = "vrl-random"
workspace = "../workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false


[lib]
name = "vrl_random"
path = "./lib.rs"
test = true
bench = false
doctest = false


[features]
default = []


[dependencies]
vrl-preludes = { path = "../preludes" }
rand = { version = "*", default-features = false, features = ["std", "std_rng"], optional = false }
paste = { version = "*", default-features = false, features = [] }

