

[workspace]
members = [
	"../bytes",
	"../cli-arguments",
	"../errors",
	"../preludes",
	"../random",
]


[package]
name = "vrl"
version = "0.1.0"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
edition = "2021"
autobins = false
autoexamples = false
autotests = false
autobenches = false


[lib]
name = "vrl"
path = "./lib.rs"
test = false
bench = false
doctest = false


[features]
default = []


[dependencies]
vrl-bytes = { path = "../bytes" }
vrl-cli-arguments = { path = "../cli-arguments" }
vrl-errors = { path = "../errors" }
vrl-preludes = { path = "../preludes" }
vrl-random = { path = "../random" }


