

[workspace]
members = [
	"../bytes",
	"../cli-arguments",
	"../errors",
	"../preludes",
	"../random",
]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Ciprian Dorin Craciun <ciprian@volution.ro>"]
license = "GPL-3.0-or-later"
description = "VRL -- Volution Rust Libraries"
keywords = []
categories = []
homepage = "https://github.com/volution/volution-rust-libraries"
repository = "https://github.com/volution/volution-rust-libraries"
documentation = "https://github.com/volution/volution-rust-libraries"
publish = false


[package]
name = "vrl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false


[lib]
name = "vrl"
path = "./lib.rs"
test = false
bench = false
doctest = false


[features]
default = []


[dependencies]
vrl-bytes = { path = "../bytes" }
vrl-cli-arguments = { path = "../cli-arguments" }
vrl-errors = { path = "../errors" }
vrl-preludes = { path = "../preludes" }
vrl-random = { path = "../random" }


