

[workspace]
members = [
	"../bytes",
	"../cli-arguments",
	"../errors",
	"../lib",
	"../preludes",
	"../random",
]
resolver = "2"


[workspace.package]
version = "0.1.0"
publish = false
edition = "2021"
rust-version = "1.75"
authors = [
	"Ciprian Dorin Craciun <ciprian@volution.ro>",
]
license = "GPL-3.0-or-later"
description = "VRL -- Volution Rust Libraries"
keywords = []
categories = []
homepage = "https://github.com/volution/volution-rust-libraries"
repository = "https://github.com/volution/volution-rust-libraries"
documentation = "https://github.com/volution/volution-rust-libraries"








[profile.dev]
incremental = true
codegen-units = 1024
opt-level = 1
lto = "off"
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"
rpath = false
panic = "unwind"


[profile.test]
incremental = true
codegen-units = 1024
opt-level = 1
lto = "off"
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
rpath = false
split-debuginfo = "packed"


[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"
rpath = false
panic = "abort"


[profile.bench]
incremental = false
codegen-units = 1
opt-level = 3
lto = "fat"
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"
rpath = false




[profile.dev.package."*"]
incremental = true
codegen-units = 1024
opt-level = 1
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"




[profile.dev.build-override]
incremental = true
codegen-units = 1024
opt-level = 2
debug = "full"
debug-assertions = true
overflow-checks = true
strip = "none"
split-debuginfo = "packed"


[profile.release.build-override]
incremental = true
codegen-units = 1024
opt-level = 2
debug = "none"
debug-assertions = false
overflow-checks = true
strip = "symbols"
split-debuginfo = "packed"


